# verum

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
docs/laboratory/: gospel.md  izinyoka.md  morphine.md  sighthound.md
docs/package/: installation.md
docs/sources/data/: real_hardware_data.json
docs/sources/latex/: acoustic-wind-tunnel.tex  capacitative-dielectric-analyzer.tex  categorical-thermodynamics.tex  cellular-circuits.tex  electric-field-mapper.tex  material-resonance-analyzer.tex  psychon-circuit.tex  spectrometer.tex  temporal-scripting.tex  thermal-analyzer.tex  transplanckian-counting.tex  vibration-analyzer.tex
egoista/: package-lock.json  package.json
egoista/src/components/: ArchitectureComparison.js  Footer.js  HireMe.js  KatexBlock.js  LamborghiniModel.js  Layout.js  (+5 more)
gusheshe/: Cargo.toml
gusheshe/src/: bayesian.rs  certificate.rs  engine.rs  error.rs  fuzzy.rs  lib.rs  logical.rs  point.rs  resolution.rs  types.rs
philharmonic/: README.md  __init__.py  circuit.py  telemetry.py  trajectory.py  transport.py
philharmonic/figures/: __init__.py  generate_panels.py  validation_results.json
philharmonic/validation/: __init__.py  fault_prediction.py  racing_line.py  run_all.py  state_reconstruction.py  tire_degradation.py
publication/automobile-membrane/: automobile-membrane-sensor.aux  automobile-membrane-sensor.bbl  automobile-membrane-sensor.blg  automobile-membrane-sensor.out  automobile-membrane-sensor.tex  references.bib
publication/computing-architecture/: autonomous-computing-architecture.tex  references.bib
publication/counting-loops/: bounded-phase-space-state-counting.aux  bounded-phase-space-state-counting.bbl  bounded-phase-space-state-counting.blg  bounded-phase-space-state-counting.out  bounded-phase-space-state-counting.tex  references.bib
publication/equations-of-state/: automobile-trajectory-states.aux  automobile-trajectory-states.bbl  automobile-trajectory-states.blg  automobile-trajectory-states.out  automobile-trajectory-states.tex  references.bib
publication/molecular-navigation/: automobile-molecular-navigation-systems.aux  automobile-molecular-navigation-systems.bbl  automobile-molecular-navigation-systems.blg  automobile-molecular-navigation-systems.out  automobile-molecular-navigation-systems.tex  references.bib
publication/philharmonic/: philharmonic-f1-validation.aux  philharmonic-f1-validation.bbl  philharmonic-f1-validation.blg  philharmonic-f1-validation.out  philharmonic-f1-validation.tex  references.bib
publication/ultimate-bahrain-lap/: references.bib  theoretical-minimum-bahrain.aux  theoretical-minimum-bahrain.bbl  theoretical-minimum-bahrain.blg  theoretical-minimum-bahrain.out  theoretical-minimum-bahrain.tex  theoretical-minimum-bahrain.toc
publication/vehicle-circuit-graph/: references.bib  vehicle-circuit-graph.aux  vehicle-circuit-graph.bbl  vehicle-circuit-graph.blg  vehicle-circuit-graph.out  vehicle-circuit-graph.tex
publication/vehicle-membrane-semi-conductor/: references.bib  vehicle-membane-semi-conductor-architecture.aux  vehicle-membane-semi-conductor-architecture.bbl  vehicle-membane-semi-conductor-architecture.blg  vehicle-membane-semi-conductor-architecture.out  vehicle-membane-semi-conductor-architecture.tex
publication/vehicle-shader-computing/: purpose-based-membrane-shader-computing.aux  purpose-based-membrane-shader-computing.bbl  purpose-based-membrane-shader-computing.blg  purpose-based-membrane-shader-computing.out  purpose-based-membrane-shader-computing.tex  references.bib
ruzende/: README.md
ruzende/comm/: gusheshe_izinyoka.rz  sighthound_fusion.rz
ruzende/transform/: combine_harvester_integration.rz
scripts/: setup-dev.sh
sighthound/: Cargo.toml
sighthound/src/: behavioral.rs  fusion.rs  lib.rs  maintenance.rs  sensors.rs  timing.rs  types.rs
verum-core/: Cargo.toml
verum-core/examples/: revolution_demo.rs  unified_demo.rs
verum-core/src/: bmd.rs  entropy.rs  lib.rs  main.rs  network.rs  oscillation.rs  route_reconstruction.rs  utils.rs  vehicle.rs  verum_system.rs
verum-core/src/ai/: decision_engine.rs  fear_response.rs  mod.rs  pattern_matcher.rs  personal_model.rs
verum-core/src/automotive/: mod.rs
verum-core/src/biometrics/: mod.rs  patterns.rs  processing.rs  sensors.rs  validator.rs
verum-core/src/control/: mod.rs
verum-core/src/data/: collectors.rs  lifecycle.rs  mod.rs  patterns.rs  quantum_patterns.rs  storage.rs  streams.rs  temporal_precision.rs
verum-core/src/insurance/: mod.rs
verum-core/src/intelligence/: agent_orchestration.rs  cross_domain_classification.rs  metacognitive_orchestrator.rs  mod.rs  specialized_agents.rs
verum-core/src/safety/: mod.rs
verum-core/src/utils/: config.rs  error.rs  logging.rs  mod.rs
verum-learn/: pyproject.toml
verum-learn/verum_learn/: __init__.py
verum-learn/verum_learn/circuit_graph/: __init__.py  validation.py
verum-learn/verum_learn/core/: __init__.py  cross_domain.py  pattern_transfer.py  personal_model.py
verum-learn/verum_learn/counting_loops/: __init__.py  validation.py
verum-learn/verum_learn/equations_of_state/: __init__.py  validation.py
verum-learn/verum_learn/membrane/: __init__.py  alu.py  carriers.py  ensemble.py  junction.py  lipid.py  logic_gates.py  memory.py  s_entropy.py  sensor_circuit.py  transistor.py  validation.py
verum-learn/verum_learn/molecular_navigation/: __init__.py  exhaust_trail.py  hardware_oscillator.py  road_network.py  virtual_atmosphere.py
verum-learn/verum_learn/molecular_navigation/experiments/: __init__.py  exp1_night_navigation.py  exp2_brake_anticipation.py  exp3_around_corner.py  exp4_sweet_spot.py  exp5_convoy_formation.py  run_all.py
verum-learn/verum_learn/semiconductor/: __init__.py  validation.py
verum-learn/verum_learn/shader_computing/: __init__.py  validation.py  validation_results.json
verum-llm/: README.md  inference.py  prepare_corpus.py  train.py
verum-network/: go.mod
vesicle/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
vesicle/public/: plan.md
(+173 files in other folders)
