[package]
name = "gusheshe"
version = "0.1.0"
edition = "2021"
description = "Gusheshe - Hybrid Resolution Engine for Real-time Decision Making"
authors = ["Kundai Sachikonye"]
license = "MIT"
repository = "https://github.com/fullscreen-triangle/verum"
keywords = ["logic-programming", "fuzzy-logic", "real-time", "decision-engine"]
categories = ["algorithms", "science"]

[lib]
name = "gusheshe"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ruzende"
path = "src/bin/ruzende.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logic programming and reasoning
# Custom Prolog-like engine - we'll build this
# Using mathematical libraries for fuzzy logic
nalgebra = "0.32"
num-traits = "0.2"
rand = "0.8"

# Real-time constraints
priority-queue = "1.3"
rtrb = "0.2"  # Real-time ring buffer

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and duration handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"

# CLI support for ruzende
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = ["full"]
full = ["logical", "fuzzy", "bayesian"]
logical = []
fuzzy = []
bayesian = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "resolution_performance"
harness = false 