[package]
name = "gusheshe"
version = "0.1.0"
edition = "2021"
description = "Gusheshe - Hybrid Resolution Engine for Real-time Decision Making"
authors = ["Kundai Sachikonye"]
license = "MIT"
repository = "https://github.com/fullscreen-triangle/verum"
keywords = ["logic-programming", "fuzzy-logic", "real-time", "decision-engine"]
categories = ["algorithms", "science"]

[lib]
name = "gusheshe"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gusheshe-demo"
path = "src/bin/demo.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logic programming and reasoning
# Custom dependencies for hybrid reasoning
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Mathematical operations
ndarray = "0.15"
nalgebra = "0.32"

# Fuzzy logic
# Note: Consider adding specific fuzzy logic crates

# Bayesian inference
# Note: Consider adding probabilistic programming crates

# Real-time constraints
tokio-util = "0.7"

# CLI for demo
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["full"]
full = ["logical", "fuzzy", "bayesian"]
logical = []
fuzzy = []
bayesian = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "resolution_performance"
harness = false 